SmoWebBase/static/css/Base.css
html{
	height: 100%;
}
		
body {	
	height: 100%;
	background-color: #DEB03E;
	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
	font-size: 14px;
	line-height: 1.42857;
	color: black; /*#333*/
	margin: 0px;
}

/* Sections and headers */
.page-container {
	max-width: 1000px;
	margin-left: auto; 
	margin-right: auto;
	margin-top: 30px;	
    background-image: url("/static/img/GreyStripes.png");
    background-repeat: repeat;
    padding: 30px;
    border-radius: 10px;
}

h1.title {
	text-align: center;
}

.section {
	margin-top: 20px; 	
}

.topic-title {
	margin-bottom: 10px;
	font-size: x-large;
	border-bottom: 1px solid #AAA;
}

.subtitle {
	font-style: italic;
	text-align: center;
}

h1, h2, h3, h4 {
	margin-bottom: 10px;
	margin-top: 30px;
}

h1 {
	font-size: x-large;
	border-bottom: 1px solid #AAA;
	line-height: 40px;
}

h1.title {
	font-size: xx-large;
	text-align: center;
	border-bottom: none;
}

h2 {	
	font-size: large;	
}

h3 {
	font-size: large;
	font-style: italic;
}

h4 {
	font-size: medium;
	font-weight: bold;	
}

blockquote {
	font-size: 14px;
	font-style: italic;
}

/* Horizontal navigation bar */ 

.navbar-fixed-top {
    border: none;
    -webkit-backface-visibility: hidden;
}

.navbar-default {
    background-color: black; /*#F8F8F8*/
    border-color: #E7E7E7;
    margin-bottom: 0px;
}


/* Horizontal navigation brand ('SmoWeb') + hover, focus event style */
.navbar-default .navbar-brand {
	color: #0875CA; /*#777*/
	font-size: x-large; 
	font-weight: bold; 
	text-align: center;
}

.navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
    color: #0875CA;
    background-color: transparent;
}

/* Horizontal navigation dropdowns + hover, focus event style */
.navbar-default .navbar-nav > li > a {
  	color:  white; /*#777*/
  	font-weight: bold;
}

.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
    color: #0875CA; /*#333*/
    background-color: transparent;
}

/* Horizontal navigation dropdowns on open + hover, focus event style */
.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
    color: #0875CA; /*#555*/
    background-color: black; /*#E7E7E7*/
}


/* Horizontal navigation dropdowns color switch on collapse */
.navbar-default .navbar-nav > li > a[aria-expanded="false"] {
	color: white;
    background-color: black; /*#E7E7E7*/
}

/* Horizontal navigation dropdowns menu */
.dropdown-menu {
    position: absolute;
    top: 100%;
    left: 0px;
    z-index: 1000;
    display: none;
    float: left;
    min-width: 160px;
    padding: 5px 0px;
    margin: 2px 0px 0px;
    font-size: 14px;
    text-align: left;
    list-style: outside none none;
    background-color: #E6E6FA; /* #FFF */
    background-clip: padding-box;
    border: 1px solid rgba(0, 0, 0, 0.15);
    border-radius: 4px;
    box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.176);
}

.open .dropdown-menu {
    border: none;
}

.dropdown-menu > li > a {
    display: block;
    padding: 3px 20px;
    clear: both;
    font-weight: 400;
    line-height: 1.42857;
    color: rgba(0, 82, 189, 1); /*black*/ /*#333*/
    white-space: nowrap;
}


/* Horizontal navigation dropdown menu links + on hover, focus */
.dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
    color: rgba(0, 82, 189, 1); /*black*/ /*#262626*/
    text-decoration: none;
    background-color: white; /*#F5F5F5*/
}

/* Logo */
.logo {
	text-align: right; 
	padding-top:10px; 
	padding-bottom: 10px;
} 

.logo img {
	height: 30px; 
}

/* Move down content because we have a fixed navbar that is 50px tall */
body {
  padding-top: 50px;
}

/* Sidebar */
.sidebar {
  position: fixed;
  top: 50px;
  bottom: 0px;
  left: 0;
  z-index: 1000;
  display: block;    
  overflow-x: hidden;
  overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
  background-image: url("/static/img/GreyStripes.png");
  background-repeat: repeat;
  border-right: 7px solid #BABABA;
  width: 180px;
  padding-top: 20px;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 5px;
  -webkit-backface-visibility: hidden;
}

/* Sidebar navigation */

.nav-sidebar {
	display: inline-block;
	background-image: url("/static/img/GreyStripes.png");
	background-repeat: repeat;
}

.nav-sidebar > li {
  width: 150px;
  display: inline-block;
}

.nav-sidebar > li > a {
  cursor: pointer;
}
 
.nav-sidebar > .active > a,
.nav-sidebar > .active > a:hover,
.nav-sidebar > .active > a:focus {
  color: #fff;
  background-color: #0875CA;
  border-radius: 7px; 
}


/* Model Presentation */
.presentation > div {
	margin-left: auto;
	margin-right: auto;
	text-align: center;
}

.presentation img {
	margin-top: 10px;
	margin-bottom: 10px;
	max-height: 100%;
	max-width: 100%;	
}

.presentation > .description {
	margin-top: 10px;
	padding-left: 20%;
	padding-right: 20%;
}

/* Model Thumbnail */
.thumb {
	display: inline-block;
	width: 160px;
	height: 160px;
	font-size: 14px;
	vertical-align: bottom;
	border-radius: 10px;
	border: solid 1px grey;
	text-align: center;
	margin-bottom: 10px;
	margin-right: 5px;
	background-color: white;
}

.thumb:focus, .thumb:hover {
	border: solid 3px #0875CA;
}

/* Content */
#content {
	height: auto; 
	min-height: 100%;
	padding-bottom: 20px;
}

/* Documentation */
div.restview {
	background-color:white; 
	border: solid 1px #CCC;
	padding: 50px;
	counter-reset: figure;
}

.align-center {
	text-align: center;
	margin-left: auto;
	margin-right: auto;
}

.figure > .caption:before {
	font-weight: bold;
	counter-increment: figure;
	content: "Figure " counter(figure) ": ";	
}

table.nice-table {
    margin-left:auto; 
    margin-right:auto;
    border: solid 1px #A0A0A0;
    margin-top: 50px;
    margin-bottom: 50px;
}

table.nice-table td,
table.nice-table th {
    padding: 10px;	
    border: solid 1px #A0A0A0;
    min-width: 70px; 
}

table.nice-table th {
	background-color: #BABABA;
}

table.nice-table tr:nth-child(even) {
	background: #E6E6FA;
}

table.nice-table tr:nth-child(odd) {
	background: #FFFFFF;
}

table.team-table {
	background-color: #EFEFEF;
	margin-left: auto;
	margin-right: auto;
}

table.team-table tr td {
 	max-width: 200px;
	padding: 20px 20px;
	border: 1px solid #FFF;
	text-align: center;
}

table.subfigures tr td {
	padding: 10px 10px;
	border: 1px solid #FFF;
	text-align: center;
}


/* Internet Explorer specific styles */
.no-rgba table.nice-table tr {
	background: #FFFFFF;
}


.section .select-text {
	font-size: medium;  
	margin-bottom: 5px;
/* 	color: #0875CA; */
	display: inline-block;
}

.section .label-text {
	font-weight: bold;  
	margin-bottom: 5px;
	margin-right: 5px;
}

.section .italic-text {
	font-style: italic;
}

/*
Tooltip
*/

div.tooltip-inner {
    min-width:300px;
    max-width: 500px;
    word-wrap: break-word;
    white-space: normal;
    text-align: left;
}

@media (max-width: 1024px) {
	.col-sm-10 {
	    width: 100%;
	}
}

.view-group-container .nav-stacked > li {
    	display: inline-block;
}

.view-group-container .tab-content {
	max-width: 100%;
}

/* @media (max-width: 1222px) { */
	
/*  	.view-group-container .tab-content { */
/*  		max-width: 100%; */
/*  	} */
/* } */

/* @media (min-width: 1223px) { */
/*  	.view-group-container .tab-content { */
/*  		max-width: 83%; */
/*  	} */
 	
/*  	.view-group-container .ul { */
/*  		margin-bottom: 10px; */
/*  	} */
/* } */

